--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "watch:sass": "sass --watch sass/:static/css/",
+    "watch": "npm-run-all --parallel watch:*",
+    "start": "npm-run-all --parallel watch run",
+    "run": "nodemon server.js",
   },
   "repository": {
     "type": "git",
@@ -21,7 +24,9 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "mongodb": "^5.1.0"
+    "mongodb": "^5.1.0",
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.59.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
