--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "watch:sass": "sass --watch sass/:static/",
     "watch": "npm-run-all --parallel watch:*",
     "start": "npm-run-all --parallel watch run",
-    "run": "nodemon server.js",
+    "run": "nodemon server.js"
   },
   "repository": {
     "type": "git",
