--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "mongodb": "^5.1.0",
+    "multer": "^1.4.5-lts.1",
     "npm-run-all": "^4.1.5",
     "sass": "^1.59.3"
   },
