--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongodb": "^5.1.0",
-    "multer": "^1.4.5-lts.1",
     "mongoose": "^7.0.3",
+    "multer": "^1.4.5-lts.1",
     "npm-run-all": "^4.1.5",
     "sass": "^1.59.3"
   },
