--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "multer": "^1.4.5-lts.1",
     "npm-run-all": "^4.1.5",
     "sass": "^1.59.3",
+    "sharp": "^0.32.0",
     "xss": "^1.0.14"
   },
   "devDependencies": {
